--- a/templates/product_owner/index.html.twig
+++ b/templates/product_owner/index.html.twig
@@ -1,20 +1,35 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %} {% block title %}Product Owner{% endblock %} {%
+block body %}
+<div>
+    <h1>Product Owner</h1>
 
-{% block title %}Hello ProductOwnerController!{% endblock %}
+    <h2>Annonces de trésorerie pour tous les comptes</h2>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <table>
+        <thead>
+            <tr>
+                <th>N° de SIREN</th>
+                <th>Raison sociale</th>
+                <th>Nombre transactions</th>
+                <th>Devise</th>
+                <th>Montant total</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for compte in comptes %}
+            <tr>
+                <td>{{ compte.getNumeroSiren() }}</td>
+                <td>{{ compte.getLabel() }}</td>
+                <td>TEST</td>
+                <td>{{ compte.getDevise() }}</td>
+                <td>TEST</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/mainuser/iut/ProjectBankTran/src/Controller/ProductOwnerController.php</code></li>
-        <li>Your template at <code>/home/mainuser/iut/ProjectBankTran/templates/product_owner/index.html.twig</code></li>
-    </ul>
+    <p>Exportation</p>
+    <p>Par compte</p>
+    <p>Exportation</p>
 </div>
 {% endblock %}
